--- a/BlinkDetector/app/src/main/res/layout/activity_main.xml
+++ b/BlinkDetector/app/src/main/res/layout/activity_main.xml
@@ -21,20 +21,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.153" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/bt_button"
-        tools:layout_editor_absoluteX="123dp"
-        tools:layout_editor_absoluteY="180dp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/start_button"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="270dp" />
+    <FrameLayout
+        android:id="@+id/sample_content_fragment"
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0px" />
 
 </android.support.constraint.ConstraintLayout>
