--- a/BlinkDetector/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/BlinkDetector/app/src/main/res/layout/fragment_bluetooth.xml
@@ -2,12 +2,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.dimitris.blinkdetector.BluetoothFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center|top">
+
+        <TextView
+            android:id="@+id/startTextView"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@string/start"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif"
+            android:layout_gravity="center_vertical|left"
+            android:textSize="24dp"/>
+
+        <ImageButton
+            android:id="@+id/startImageButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="#00000000"
+            app:srcCompat= "@drawable/ic_start_eye" />
+
+
+    </LinearLayout>
 
 </FrameLayout>
