--- a/BlinkDetector/app/src/main/res/layout/activity_main.xml
+++ b/BlinkDetector/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/black"
     tools:context="com.example.dimitris.blinkdetector.MainActivity">
 
     <TextView
+        android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:text="@string/app_name"
-        android:textColor="@android:color/background_light"
+        android:textColor="@color/blue"
         android:textSize="30sp"
-        android:typeface="normal"
+        android:typeface="sans"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,7 +26,8 @@
     <FrameLayout
         android:id="@+id/sample_content_fragment"
         android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0px" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/titleTextView"/>
 
 </android.support.constraint.ConstraintLayout>
