--- a/BlinkDetector/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/BlinkDetector/app/src/main/res/layout/fragment_bluetooth.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.dimitris.blinkdetector.BluetoothFragment">
-
+    tools:context="com.example.dimitris.blinkdetector.BluetoothFragment"
+    android:background="@color/black">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -22,8 +22,10 @@
             android:text="@string/start"
             android:textStyle="bold"
             android:fontFamily="sans-serif"
+            android:textColor="@color/blue"
             android:layout_gravity="center_vertical|left"
             android:textSize="24dp"/>
+
 
         <ImageButton
             android:id="@+id/startImageButton"
@@ -31,6 +33,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:background="#00000000"
+            android:tint="@color/blue"
             app:srcCompat= "@drawable/ic_start_eye" />
 
 
