--- a/BlinkDetector/app/src/main/res/layout/activity_device_list.xml
+++ b/BlinkDetector/app/src/main/res/layout/activity_device_list.xml
@@ -1,9 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dimitris.blinkdetector.DeviceListActivity">
+    android:orientation="vertical"
+    >
 
-</android.support.constraint.ConstraintLayout>
+<TextView
+    android:id="@+id/title_paired_devices"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#666"
+    android:paddingLeft="5dp"
+    android:text="@string/title_paired_devices"
+    android:textColor="#fff"
+    android:visibility="gone"
+    />
+
+<ListView
+    android:id="@+id/paired_devices"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:stackFromBottom="true"
+    />
+
+<TextView
+    android:id="@+id/title_new_devices"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#666"
+    android:paddingLeft="5dp"
+    android:text="@string/title_other_devices"
+    android:textColor="#fff"
+    android:visibility="gone"
+    />
+
+<ListView
+    android:id="@+id/new_devices"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="2"
+    android:stackFromBottom="true"
+    />
+
+<Button
+    android:id="@+id/button_scan"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="SCAN"
+    />
+</LinearLayout>
