--- a/BlinkDetector/app/src/main/res/values/colors.xml
+++ b/BlinkDetector/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="black">#000000</color>
+    <color name="blue">#00d483</color>
 </resources>
